<resources>
    <string name="app_name">Login App</string>
    <string name="personal_info">Personal Information</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_pass">Enter your password</string>
    <string name="forgot">Forgot password?</string>
    <string name="remeber">Remember password?</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="bacho">Bacho</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_age">Enter your age</string>
    <string name="sex">Sex</string>
    <string name="contact">Contact No.</string>
    <string name="enter_contact">Enter your contact no.</string>
    <string name="have_account">Have an Account?</string>
    <string name="not_registered">Not Registered Yet?</string>
    <string name="save_info">Save Info</string>

    <string-array name="Sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_app__info">App_Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_personal_info">Personal Info</string>
    <string name="menu_gallery">Gallery</string>
    <string name="ambulance">Ambulance</string>
    <string name="doctor">Doctor</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
