<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    tools:context=".Get_user_Info">

    <TextView
        android:id="@+id/name_text_view_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="#7DB33F"
        android:textIsSelectable="true"
        />


    <EditText
        android:id="@+id/name_edit_text_Id"
        android:layout_gravity="center_horizontal" android:gravity="center"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/rounded_up_edittext"
        android:hint="@string/enter_name"
        android:textColor="@color/hint_foreground_holo_light"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/age_text_view_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="#7DB33F"
        android:textIsSelectable="true"
        />


    <EditText
        android:id="@+id/age_edit_text_Id"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/rounded_up_edittext"
        android:hint="@string/enter_age"
        android:textColor="@color/hint_foreground_holo_light"
        android:textSize="20sp"
        />



    <TextView
        android:id="@+id/sex_text_view_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="#7DB33F"
        android:textIsSelectable="true"
        />

    <Spinner
        android:id="@+id/sex_spinner_Id"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="17dp"
        />


    <TextView
        android:id="@+id/contact_text_view_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="#7DB33F"
        android:textIsSelectable="true"
        />

    <EditText
        android:id="@+id/contact_edit_text_Id"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_up_edittext"
        android:hint="@string/enter_contact"
        android:textColor="@color/hint_foreground_holo_light"
        android:textSize="17sp"
        />


    <Button
        android:id="@+id/save_info_Id"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/save_info"
        android:background="@drawable/rounded_up_edittext"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:backgroundTint="#7DD03f"
        />



</LinearLayout>