<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="60dp"
    tools:context=".Sign_in">


    <TextView
        android:id="@+id/email_sign_up_text_view_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="#7DB33F"
        android:textIsSelectable="true"
        />


    <EditText
        android:id="@+id/email_sign_up_edit_text_Id"
        android:layout_gravity="center_horizontal" android:gravity="center"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/rounded_up_edittext"
        android:hint="@string/enter_email"
        android:textColor="@color/hint_foreground_holo_light"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/password_sign_up_text_view_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:textColor="#7DB33F"
        android:textIsSelectable="true"
        />


    <EditText
        android:id="@+id/password_sign_up_edit_text_Id"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_up_edittext"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:textColor="@color/hint_foreground_holo_light"
        android:textSize="17sp"
        />


    <CheckBox
        android:id="@+id/remember_pass_checkbox_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/remeber"
        android:textSize="15sp"
        />


    <Button
        android:id="@+id/sign_up_button_Id"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/signup"
        android:background="@drawable/rounded_up_edittext"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:backgroundTint="#7DD03f"
        />

    <ProgressBar
        android:id="@+id/Sign_Up_progress_Bar_Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/have_an_account_textView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/have_account"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/sign_up_to_sign_in_textView_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/signin"
            android:textSize="18sp"
            android:textColor="#7DB33F"
            />

    </LinearLayout>

</LinearLayout>